--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.shpakovskiy.soundanalyser/com.shpakovskiy.soundanalyser.HelloApplication
+                            <mainClass>
+                                com.shpakovskiy.soundanalyser/com.shpakovskiy.soundanalyser.SoundAnalyserApplication
                             </mainClass>
                         </configuration>
                     </execution>
